# SFML-Matrix-Effect

./: CMakeLists.txt  README.md
src/: ConfigFile.cpp  ConfigFile.h  Entry.cpp  Math.h  Matrix.cpp  Matrix.h  MatrixConfig.h  MatrixLine.cpp  MatrixLine.h  Random.h  Symbol.cpp  Symbol.h  main.cpp
src/matrix/: ConfigFile.cpp  ConfigFile.h  Matrix.cpp  Matrix.h  MatrixConfig.h  MatrixLine.cpp  MatrixLine.h  Symbol.cpp  Symbol.h
src/utils/: Random.cpp  Random.h
